# smartcliapp

./: MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  smartcliapp.py  tox.ini
data/requirements/: requirements-dev.txt
requirements/: requirements-dev.txt
smartcliapp/: __init__.py  app.py  climanager.py  factories.py  informer.py  informers.py  managers.py  printers.py
