[metadata]
name = smartcliapp
version = attr: smartcliapp.__version__
author = A.A Suvorov
author_email = smartlegiondev@gmail.com
description = 'Cross-platform library of tools for creating console applications, based on the click library.'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab
project_urls =
    Documentation = https://github.com/smartlegionlab/smartcliapp/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/smartcliapp/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    smartlegionlab
    click
    smart cli app
    console application
    create cli

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    smartprinter~=0.2.0
    click~=8.0.1

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py